assets/styles/components/_letter-filter.scss
@use './../variables/variables' as vars;
@use './../mixins/mixins' as mx;
@use 'sassy-scss/mixins' as sassy-mx;

.c-letter-filter {
	display: var(--display, none);
	margin: 0 0 vars.$spacer * 1.5 0;

	@include mx.breakpoint('sm') {
		--display: block;
	}

	&__list {
		display: grid;
		grid-template-columns: repeat(auto-fit, minmax(38px, 1fr));
		gap: vars.$spacer * 0.5;

		&-item {
			display: flex;
			align-items: center;
			justify-content: center;
			aspect-ratio: 1/1;

			&:hover,
			&.is-current {
				.c-letter-filter__button {
					--color-background: var(--primary);
					--color: var(--white-100);
					--color-border: var(--white-100);
					--style-border: dashed;

					font-weight: 600;
				}
			}
		}
	}

	&__button {
		--spacing: #{vars.$spacer * 0.25};
		--size-font: 1rem;
		--width-min: 1.4rem;

		font-size: var(--size-font);
		padding: var(--spacing);
		width: 100%;
		height: 100%;

		&:not(.c-letter-filter__button--all) {
			text-transform: uppercase;
		}
	}

	&--desktop {
		@include mx.breakpoint('sm', 'max') {
			display: none;
		}
	}
}

